<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4d000000"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="horizontal">
            
            <LinearLayout
                android:id="@+id/ll_album"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                
                <ImageView
                    android:id="@+id/iv_xiangpian"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/xiangpian" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/string_album"
                    android:textColor="#ff666666"
                    android:textSize="12sp" />
            
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/ll_camera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                
                <ImageView
                    android:id="@+id/iv_xiangji"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/xiangji" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/string_camera"
                    android:textColor="#ff666666"
                    android:textSize="12sp" />
            
            </LinearLayout>
        
        </LinearLayout>
        
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/string_cancel"
            android:textColor="#ff333333"
            android:textSize="14sp" />
    
    </LinearLayout>

</RelativeLayout>